--- a/coverage.html
+++ b/coverage.html
@@ -119,28 +119,52 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="medium">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/Code.html">xprng/code/src/code.ts</a>
             </td>
             <td>component</td>
             <td>Code</td>
-            <td align="right" data-sort="45">
-                <span class="coverage-percent">45 %</span>
-                <span class="coverage-count">(5/11)</span>
+            <td align="right" data-sort="66">
+                <span class="coverage-percent">66 %</span>
+                <span class="coverage-count">(6/9)</span>
             </td>
         </tr>
         <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./miscellaneous/variables.html#ERROR_BOTH">xprng/code/src/code.ts</a>
+            </td>
+            <td>variable</td>
+            <td>ERROR_BOTH</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./miscellaneous/variables.html#ERROR_NONE">xprng/code/src/code.ts</a>
+            </td>
+            <td>variable</td>
+            <td>ERROR_NONE</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/CodeHarness.html">xprng/code/testing/code-harness.ts</a>
             </td>
             <td>class</td>
             <td>CodeHarness</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(1/2)</span>
             </td>
         </tr>
         <tr class="low">
