--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -80,7 +80,7 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content class">
+               <div class="content miscellaneous-variables">
                    <div class="content-data">
 
 
@@ -94,97 +94,47 @@
 
 
 
+
+
+
+
+
+
 <ol class="breadcrumb">
-  <li class="breadcrumb-item">Classes</li>
-  <li class="breadcrumb-item" >CodeHarness</li>
+  <li class="breadcrumb-item">Miscellaneous</li>
+  <li class="breadcrumb-item">Variables</li>
 </ol>
 
-<ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item">
-            <a href="#info" 
-                class="nav-link"
-                class="nav-link active"
-                role="tab" id="info-tab" data-bs-toggle="tab" data-link="info">Info</a>
-        </li>
-        <li class="nav-item">
-            <a href="#source" 
-                class="nav-link"
-                
-                role="tab" id="source-tab" data-bs-toggle="tab" data-link="source">Source</a>
-        </li>
-</ul>
-
-<div class="tab-content">
-    <div class="tab-pane fade active in" id="info">
-        <p class="comment">
-            <h3>File</h3>
-        </p>
-        <p class="comment">
-            <code>xprng/code/testing/code-harness.ts</code>
-        </p>
-
-
-            <p class="comment">
-                <h3>Description</h3>
-            </p>
-            <p class="comment">
-                <p>Harness for interacting with <code>Code</code> components in tests.</p>
-
-            </p>
-
-            <p class="comment">
-                <h3>Extends</h3>
-            </p>
-            <p class="comment">
-                        <code>ContentContainerComponentHarness</code>
-            </p>
-
-
-
-            <section data-compodoc="block-index">
+<section data-compodoc="block-index">
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <h6><b>Properties</b></h6>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <ul class="index-list">
-                            <li>
-                                    <span class="modifier">Static</span>
-                                <a href="#hostSelector" >hostSelector</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
-
-
-
-
-
+            <tr>
+                <td class="col-md-4">
+                    <ul class="index-list">
+                        <li>
+                            <a href="#ERROR_BOTH" title="xprng/code/src/code.ts" ><b>ERROR_BOTH</b>&nbsp;&nbsp;&nbsp;(xprng/.../code.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#ERROR_NONE" title="xprng/code/src/code.ts" ><b>ERROR_NONE</b>&nbsp;&nbsp;&nbsp;(xprng/.../code.ts)</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
         </tbody>
     </table>
 </section>
 
-
-            <section data-compodoc="block-properties">
-    
-    <h3 id="inputs">
-        Properties
-    </h3>
-    <table class="table table-sm table-bordered">
+    <h3>xprng/code/src/code.ts</h3>
+    <section data-compodoc="block-properties">
+    <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="hostSelector"></a>
+                    <a name="ERROR_BOTH"></a>
                     <span class="name">
-                            <span class="modifier">Static</span>
-                        <span ><b>hostSelector</b></span>
-                        <a href="#hostSelector"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>ERROR_BOTH</b></span>
+                        <a href="#ERROR_BOTH"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -196,47 +146,40 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;xpr-code&quot;</code>
+                        <i>Default value : </i><code>&quot;Either &#x27;code&#x27; or &#x27;src&#x27; input should be provided, not both.&quot;</code>
                     </td>
                 </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">xprng/code/testing/code-harness.ts:7</a></div>
-                        </td>
-                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="ERROR_NONE"></a>
+                    <span class="name">
+                        <span ><b>ERROR_NONE</b></span>
+                        <a href="#ERROR_NONE"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&quot;Either &#x27;code&#x27; or &#x27;src&#x27; input must be provided. Neither is set.&quot;</code>
+                    </td>
+                </tr>
 
 
         </tbody>
     </table>
 </section>
-
-
-
-
-
-
-
-    </div>
-
-
-    <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ContentContainerComponentHarness } from &quot;@angular/cdk/testing&quot;;
-
-/**
- * Harness for interacting with &#x60;Code&#x60; components in tests.
- */
-export class CodeHarness extends ContentContainerComponentHarness {
-  static hostSelector &#x3D; &quot;xpr-code&quot;;
-}
-</code></pre>
-    </div>
-</div>
-
-
-
-
-
-
 
 
 
@@ -265,8 +208,8 @@ export class CodeHarness extends ContentContainerComponentHarness {
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'class';
-            var COMPODOC_CURRENT_PAGE_URL = 'CodeHarness.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'miscellaneous-variables';
+            var COMPODOC_CURRENT_PAGE_URL = 'variables.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
