deploy: 572ac0a041150e78d8948a2a624b380a477bb7c6

--- a/classes/CodeHarness.html
+++ b/classes/CodeHarness.html
@@ -201,7 +201,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">xprng/code/testing/code-harness.ts:7</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">xprng/code/testing/code-harness.ts:8</a></div>
                         </td>
                     </tr>
 
@@ -220,7 +220,8 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ContentContainerComponentHarness } from &quot;@angular/cdk/testing&quot;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ContentContainerComponentHarness} from &quot;@angular/cdk/testing&quot;;
+import {ErrorStateHarness} from &#x27;@xprng/common/testing&#x27;;
 
 /**
  * Harness for interacting with &#x60;Code&#x60; components in tests.
