deploy: b6d3ef67effbe6c0935bd2f7a6c96c0f92642d93

--- a/coverage.html
+++ b/coverage.html
@@ -287,6 +287,66 @@
                 <span class="coverage-count">(2/4)</span>
             </td>
         </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Slide.html">xprng/slides/src/slide.ts</a>
+            </td>
+            <td>component</td>
+            <td>Slide</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Slides.html">xprng/slides/src/slides.ts</a>
+            </td>
+            <td>component</td>
+            <td>Slides</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/23)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./miscellaneous/typealiases.html#Attr">xprng/slides/src/slides.ts</a>
+            </td>
+            <td>type alias</td>
+            <td>Attr</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/SlideHarness.html">xprng/slides/testing/public-api.ts</a>
+            </td>
+            <td>class</td>
+            <td>SlideHarness</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/SlidesHarness.html">xprng/slides/testing/public-api.ts</a>
+            </td>
+            <td>class</td>
+            <td>SlidesHarness</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
     </tbody>
 </table>
 
