--- a/classes/SlideHarness.html
+++ b/classes/SlideHarness.html
@@ -80,7 +80,7 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content miscellaneous-typealiases">
+               <div class="content class">
                    <div class="content-data">
 
 
@@ -94,80 +94,146 @@
 
 
 
-
-
-
-
-
-
 <ol class="breadcrumb">
-  <li class="breadcrumb-item">Miscellaneous</li>
-  <li class="breadcrumb-item">Type aliases</li>
+  <li class="breadcrumb-item">Classes</li>
+  <li class="breadcrumb-item" >SlideHarness</li>
 </ol>
 
-<section data-compodoc="block-index">
+<ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item">
+            <a href="#info" 
+                class="nav-link"
+                class="nav-link active"
+                role="tab" id="info-tab" data-bs-toggle="tab" data-link="info">Info</a>
+        </li>
+</ul>
+
+<div class="tab-content">
+    <div class="tab-pane fade active in" id="info">
+        <p class="comment">
+            <h3>File</h3>
+        </p>
+        <p class="comment">
+            <code>xprng/slides/testing/public-api.ts</code>
+        </p>
+
+
+
+            <p class="comment">
+                <h3>Extends</h3>
+            </p>
+            <p class="comment">
+                        <code>ContentContainerComponentHarness</code>
+            </p>
+
+
+
+            <section data-compodoc="block-index">
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <ul class="index-list">
-                        <li>
-                            <a href="#Attr" title="xprng/slides/src/slides.ts" ><b>Attr</b>&nbsp;&nbsp;&nbsp;(xprng/.../slides.ts)</a>
-                        </li>
-                        <li>
-                            <a href="#MarkdownOptions" title="xprng/markdown/src/markdown.ts" ><b>MarkdownOptions</b>&nbsp;&nbsp;&nbsp;(xprng/.../markdown.ts)</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#content" >content</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Static</span>
+                                    <span class="modifier">Readonly</span>
+                                <a href="#hostSelector" >hostSelector</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+
+
+
+
+
         </tbody>
     </table>
 </section>
 
-    <h3>xprng/slides/src/slides.ts</h3>
-    <section data-compodoc="block-typealias">
+
+            <section data-compodoc="block-properties">
+    
+    <h3 id="inputs">
+        Properties
+    </h3>
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="Attr"></a>
-                    <span class="name "><b>Attr</b><a href="#Attr"><span class="icon ion-ios-link"></span></a></span>
+                    <a name="content"></a>
+                    <span class="name">
+                        <span ><b>content</b></span>
+                        <a href="#content"><span class="icon ion-ios-link"></span></a>
+                    </span>
                 </td>
             </tr>
-            <tr>
-                <td class="col-md-4">
-                    <code>    <code>T | string | null | undefined</code>
-</code>
-                </td>
-            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>this.locatorForOptional(&#x27;*&#x27;)</code>
+                    </td>
+                </tr>
+
+
         </tbody>
     </table>
-</section>    <h3>xprng/markdown/src/markdown.ts</h3>
-    <section data-compodoc="block-typealias">
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="MarkdownOptions"></a>
-                    <span class="name "><b>MarkdownOptions</b><a href="#MarkdownOptions"><span class="icon ion-ios-link"></span></a></span>
+                    <a name="hostSelector"></a>
+                    <span class="name">
+                            <span class="modifier">Static</span>
+                            <span class="modifier">Readonly</span>
+                        <span ><b>hostSelector</b></span>
+                        <a href="#hostSelector"><span class="icon ion-ios-link"></span></a>
+                    </span>
                 </td>
             </tr>
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>Marked options for parsing markdown.</p>
-</div>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-                    <code>    <code>MarkedOptions</code>
-</code>
-                </td>
-            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&#x27;xpr-slide&#x27;</code>
+                    </td>
+                </tr>
+
+
         </tbody>
     </table>
 </section>
+
+
+
+
+
+
+
+    </div>
+
+
+</div>
+
+
+
+
+
+
+
 
 
                    </div><div class="search-results">
@@ -195,8 +261,8 @@
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'miscellaneous-typealiases';
-            var COMPODOC_CURRENT_PAGE_URL = 'typealiases.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'class';
+            var COMPODOC_CURRENT_PAGE_URL = 'SlideHarness.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
