deploy: 34c1ebad29896db9d2b2d75d57025588d3c36687

--- a/classes/SlidesHarness.html
+++ b/classes/SlidesHarness.html
@@ -203,7 +203,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>this.locatorForOptional(&#x27;*&#x27;)</code>
+                        <i>Default value : </i><code>this.locatorForOptional(&quot;*&quot;)</code>
                     </td>
                 </tr>
 
@@ -231,7 +231,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;xpr-slides&#x27;</code>
+                        <i>Default value : </i><code>&quot;xpr-slides&quot;</code>
                     </td>
                 </tr>
 
