--- a/classes/SlideHarness.html
+++ b/classes/SlideHarness.html
@@ -180,7 +180,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>this.locatorForOptional(&#x27;*&#x27;)</code>
+                        <i>Default value : </i><code>this.locatorForOptional(&quot;*&quot;)</code>
                     </td>
                 </tr>
 
@@ -208,7 +208,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;xpr-slide&#x27;</code>
+                        <i>Default value : </i><code>&quot;xpr-slide&quot;</code>
                     </td>
                 </tr>
 
