--- a/index.html
+++ b/index.html
@@ -92,29 +92,40 @@
 <tr>
 <th>Component</th>
 <th>Package</th>
-<th>Reference</th>
+<th>Documentation</th>
+<th>Version</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Common</td>
 <td><code>@xprng/common</code></td>
-<td><a href="xprng/common/README.md">1.0.0</a></td>
+<td><a href="xprng/common/README.md">Documentation</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fcommon" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
 <td>Vendor</td>
 <td><code>@xprng/vendor</code></td>
-<td><a href="xprng/vendor/README.md">0.0.2</a></td>
+<td><a href="xprng/vendor/README.md">Documentation</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fvendor" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
 <td>Markdown</td>
 <td><code>@xprng/markdown</code></td>
-<td><a href="xprng/markdown/README.md">0.4.1</a></td>
+<td><a href="xprng/markdown/README.md">Documentation</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fmarkdown" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
 <td>Code</td>
 <td><code>@xprng/code</code></td>
-<td><a href="xprng/code/README.md">1.1.1</a></td>
+<td><a href="xprng/code/README.md">Documentation</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fcode" alt="NPM Version" class="img-responsive"></td>
+</tr>
+<tr>
+<td>Slides</td>
+<td><code>@xprng/slides</code></td>
+<td><a href="xprng/slides/README.md">Documentation</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fslides" alt="NPM Version" class="img-responsive"></td>
 </tr>
 </tbody>
 </table>
