deploy: 7ef47a214c8156d6b3e39011f00d0b0ec38342c9

--- a/index.html
+++ b/index.html
@@ -90,41 +90,35 @@
 <table class="table table-bordered compodoc-table">
 <thead>
 <tr>
-<th>Component</th>
 <th>Package</th>
-<th>Documentation</th>
+<th>Component</th>
 <th>Version</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>Common</td>
 <td><code>@xprng/common</code></td>
-<td><a href="xprng/common/README.md">Documentation</a></td>
+<td><a href="xprng/common/README.md">Common</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fcommon" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
-<td>Vendor</td>
 <td><code>@xprng/vendor</code></td>
-<td><a href="xprng/vendor/README.md">Documentation</a></td>
+<td><a href="xprng/vendor/README.md">Vendor</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fvendor" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
-<td>Markdown</td>
 <td><code>@xprng/markdown</code></td>
-<td><a href="xprng/markdown/README.md">Documentation</a></td>
+<td><a href="xprng/markdown/README.md">Markdown</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fmarkdown" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
-<td>Code</td>
 <td><code>@xprng/code</code></td>
-<td><a href="xprng/code/README.md">Documentation</a></td>
+<td><a href="xprng/code/README.md">Code</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fcode" alt="NPM Version" class="img-responsive"></td>
 </tr>
 <tr>
-<td>Slides</td>
 <td><code>@xprng/slides</code></td>
-<td><a href="xprng/slides/README.md">Documentation</a></td>
+<td><a href="xprng/slides/README.md">Slides</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fslides" alt="NPM Version" class="img-responsive"></td>
 </tr>
 </tbody>
