deploy: c0424cccc5f13ad9a62743b6bac827036dcf9379

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <div class="content getting-started">
                    <div class="content-data">
 
-<h1>(XP)Experimental (NG)Angular Components</h1>
+<h1>(XPR)Experimental (NG)Angular Components</h1>
 <p>Micro packages of very simple, yet, smart components.</p>
 <p><a href="https://github.com/ziv/xprng/actions/workflows/ci.yml"><img src="https://github.com/ziv/xprng/actions/workflows/ci.yml/badge.svg" alt="xprng-auto-release" class="img-responsive"></a></p>
 <p>Compatible with <strong>Zoneless</strong> Angular 20+.</p>
