--- a/dependencies.html
+++ b/dependencies.html
@@ -102,6 +102,12 @@
     </ol>
     <ul class="dependencies-list">
         <li>
+            <b>@angular/platform-server</b> : ^20.1.0</li>
+        <li>
+            <b>@angular/ssr</b> : ^20.1.5</li>
+        <li>
+            <b>express</b> : ^5.1.0</li>
+        <li>
             <b>tslib</b> : ^2.3.0</li>
     </ul>
 
