deploy: 92eb3065951e963b440f7d42941f2c7d91c271ac

--- a/coverage.html
+++ b/coverage.html
@@ -299,16 +299,16 @@
                 <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/Slides.html">xprng/slides/src/slides.ts</a>
             </td>
             <td>component</td>
             <td>Slides</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/23)</span>
+            <td align="right" data-sort="52">
+                <span class="coverage-percent">52 %</span>
+                <span class="coverage-count">(11/21)</span>
             </td>
         </tr>
         <tr class="low">
