deploy: 24db497d301d20e42fddbc6fa368e7e942f64bbf

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <th>Package</th>
 <th>Component</th>
 <th>Version</th>
+<th>Content</th>
 </tr>
 </thead>
 <tbody>
@@ -100,48 +101,34 @@
 <td><code>@xprng/common</code></td>
 <td><a href="xprng/common/README.md">Common</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fcommon" alt="NPM Version" class="img-responsive"></td>
+<td>State directives</td>
 </tr>
 <tr>
 <td><code>@xprng/vendor</code></td>
 <td><a href="xprng/vendor/README.md">Vendor</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fvendor" alt="NPM Version" class="img-responsive"></td>
+<td>3rd party libraries bindings</td>
 </tr>
 <tr>
 <td><code>@xprng/markdown</code></td>
 <td><a href="xprng/markdown/README.md">Markdown</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fmarkdown" alt="NPM Version" class="img-responsive"></td>
+<td>Markdown component</td>
 </tr>
 <tr>
 <td><code>@xprng/code</code></td>
 <td><a href="xprng/code/README.md">Code</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fcode" alt="NPM Version" class="img-responsive"></td>
+<td>Code highlighter component</td>
 </tr>
 <tr>
 <td><code>@xprng/slides</code></td>
 <td><a href="xprng/slides/README.md">Slides</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fslides" alt="NPM Version" class="img-responsive"></td>
+<td>Slides viewer component</td>
 </tr>
 </tbody>
 </table>
-<h2>Content</h2>
-<ul>
-<li>Common<ul>
-<li>State directives</li>
-</ul>
-</li>
-<li>Vendor<ul>
-<li>Shiki syntax highlighter registry</li>
-</ul>
-</li>
-<li>Markdown<ul>
-<li>Markdown component</li>
-</ul>
-</li>
-<li>Code<ul>
-<li>Code highlighter component</li>
-</ul>
-</li>
-</ul>
 <hr>
 <p>Made with ❤️ for the Angular community.</p>
 
