deploy: dfe1cae4c7658b4d23fb2c667557b62a0fe64932

--- a/coverage.html
+++ b/coverage.html
@@ -167,6 +167,18 @@
                 <span class="coverage-count">(1/2)</span>
             </td>
         </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./directives/ContentSrc.html">xprng/common/src/content-src.ts</a>
+            </td>
+            <td>directive</td>
+            <td>ContentSrc</td>
+            <td align="right" data-sort="75">
+                <span class="coverage-percent">75 %</span>
+                <span class="coverage-count">(3/4)</span>
+            </td>
+        </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
