deploy: 3c5c61bcd946000ac8306e7dc1bfe277d52996ef

--- a/coverage.html
+++ b/coverage.html
@@ -263,16 +263,16 @@
                 <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/Markdown.html">xprng/markdown/src/markdown.ts</a>
             </td>
             <td>component</td>
             <td>Markdown</td>
-            <td align="right" data-sort="44">
-                <span class="coverage-percent">44 %</span>
-                <span class="coverage-count">(4/9)</span>
+            <td align="right" data-sort="55">
+                <span class="coverage-percent">55 %</span>
+                <span class="coverage-count">(5/9)</span>
             </td>
         </tr>
         <tr class="very-good">
