--- a/classes/MarkdownHarness.html
+++ b/classes/MarkdownHarness.html
@@ -188,7 +188,7 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The content projected in case of &quot;src&quot; provided mode.</p>
+                    <div class="io-description"><p>The code projected in case of &quot;src&quot; provided mode.</p>
 </div>
                 </td>
             </tr>
@@ -214,7 +214,7 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The content projected in case of &quot;content&quot; provided mode.</p>
+                    <div class="io-description"><p>The code projected in case of &quot;code&quot; provided mode.</p>
 </div>
                 </td>
             </tr>
