deploy: f8aff13368599466954df18bc233ad2c231afd03

--- a/classes/CodeHarness.html
+++ b/classes/CodeHarness.html
@@ -190,7 +190,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;xpr-code&quot;</code>
+                        <i>Default value : </i><code>&quot;xpr-content&quot;</code>
                     </td>
                 </tr>
 
