--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -146,7 +146,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;Either &#x27;code&#x27; or &#x27;src&#x27; input should be provided, not both.&quot;</code>
+                        <i>Default value : </i><code>&quot;Either &#x27;content&#x27; or &#x27;src&#x27; input should be provided, not both.&quot;</code>
                     </td>
                 </tr>
 
@@ -172,7 +172,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;Either &#x27;code&#x27; or &#x27;src&#x27; input must be provided. Neither is set.&quot;</code>
+                        <i>Default value : </i><code>&quot;Either &#x27;content&#x27; or &#x27;src&#x27; input must be provided. Neither is set.&quot;</code>
                     </td>
                 </tr>
 
