deploy: 28c45ca4c7cbc3f962fd9412139262bd2e35edfd

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <td>Markdown component</td>
 </tr>
 <tr>
-<td><code>@xprng/code</code></td>
+<td><code>@xprng/content</code></td>
 <td><a href="xprng/code/README.md">Code</a></td>
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fcode" alt="NPM Version" class="img-responsive"></td>
 <td>Code highlighter component</td>
