deploy: d73a4dfc7932b645863806d20dabd4630c070986

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 <td><img src="https://img.shields.io/npm/v/%40xprng%2Fslides" alt="NPM Version" class="img-responsive"></td>
 <td>Slides viewer component</td>
 </tr>
+<tr>
+<td><code>@xprng/docs</code></td>
+<td><a href="xprng/docs/README.md">Docs</a></td>
+<td><img src="https://img.shields.io/npm/v/%40xprng%2Fdocs" alt="NPM Version" class="img-responsive"></td>
+<td>Documentation utilities</td>
+</tr>
 </tbody>
 </table>
 <hr>
