--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta charset="utf-8">
   <title>apps/docs</title>
-  <base href="/xprng">
+  <base href="/xprng/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>@font-face{font-family:'Material Symbols Outlined';font-style:normal;font-weight:350;src:url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v271/kJF4BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzaxHMPdY43zj-jCxv3fzvRNU22ZXGJpEpjC_1p-p5Y0.woff2) format('woff2');}.material-symbols-outlined{font-family:'Material Symbols Outlined';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
@@ -12,5 +12,5 @@
 <style>html,body{height:100vh}</style><link rel="stylesheet" href="styles-QHWABU4B.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-QHWABU4B.css"></noscript></head>
 <body ngcm="">
 <xpd-root></xpd-root>
-<link rel="modulepreload" href="chunk-2TOXO7GN.js"><link rel="modulepreload" href="chunk-7QBSY4BA.js"><link rel="modulepreload" href="chunk-XXKUTOHE.js"><link rel="modulepreload" href="chunk-L4HJWWKT.js"><link rel="modulepreload" href="chunk-KNCAPVV3.js"><link rel="modulepreload" href="chunk-LQMYQ2YS.js"><link rel="modulepreload" href="chunk-TTGP6AIL.js"><link rel="modulepreload" href="chunk-5H5N25VR.js"><link rel="modulepreload" href="chunk-OGNVULEI.js"><link rel="modulepreload" href="chunk-GZS2BLPR.js"><script src="main-FU3IDGMH.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-2TOXO7GN.js"><link rel="modulepreload" href="chunk-7QBSY4BA.js"><link rel="modulepreload" href="chunk-XXKUTOHE.js"><link rel="modulepreload" href="chunk-L4HJWWKT.js"><link rel="modulepreload" href="chunk-KNCAPVV3.js"><link rel="modulepreload" href="chunk-LQMYQ2YS.js"><link rel="modulepreload" href="chunk-TTGP6AIL.js"><link rel="modulepreload" href="chunk-5H5N25VR.js"><link rel="modulepreload" href="chunk-OGNVULEI.js"><link rel="modulepreload" href="chunk-GZS2BLPR.js"><script src="main-HZQXJFUC.js" type="module"></script></body>
 </html>
