--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <style>app-root{display:flex;gap:1em;align-items:flex-start}</style><link rel="stylesheet" href="styles-KSRSFH4K.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KSRSFH4K.css"></noscript></head>
 <body>
 <app-root></app-root>
-<link rel="modulepreload" href="chunk-VPF4NMA6.js"><link rel="modulepreload" href="chunk-LUI3MKFW.js"><link rel="modulepreload" href="chunk-VB56BUGO.js"><script src="main-TD7K3RZV.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-VPF4NMA6.js"><link rel="modulepreload" href="chunk-LUI3MKFW.js"><link rel="modulepreload" href="chunk-VB56BUGO.js"><script src="main-FZVHXIFE.js" type="module"></script></body>
 </html>
