--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,10 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css"
-  >
+<!--  <link-->
+<!--    rel="stylesheet"-->
+<!--    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css"-->
+<!--  >-->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,350,0,0"
+        rel="stylesheet"/>
 </head>
 <body>
 <app-root></app-root>
