deploy: 8bc64183577219833e7e35f1b07d7cdcc610eff0

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <style>app-root{display:flex;gap:1em;align-items:flex-start}</style><link rel="stylesheet" href="styles-KSRSFH4K.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KSRSFH4K.css"></noscript></head>
 <body>
 <app-root></app-root>
-<link rel="modulepreload" href="chunk-MQSLLQM3.js"><link rel="modulepreload" href="chunk-JSD6YTFF.js"><link rel="modulepreload" href="chunk-7POEGWSC.js"><link rel="modulepreload" href="chunk-VB56BUGO.js"><script src="main-3UCC2FKM.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-LKHVBOYO.js"><link rel="modulepreload" href="chunk-2LBKKLUL.js"><link rel="modulepreload" href="chunk-IFLVXWXS.js"><link rel="modulepreload" href="chunk-VB56BUGO.js"><script src="main-6SXILQF4.js" type="module"></script></body>
 </html>
